Edited to show output of python in window